<resources>
    <string name="app_name">Trivia</string>
    <string name="titleFragment">
        Bienvenido.\n
        Ingresa tu nombre para comenzar.</string>
    <string name="saludo">
        Hola,
        <b>%1$s</b></string>
    <string name="radiobutton1">WhatsApp</string>
    <string name="radiobutton2">Youtube</string>
    <string name="radiobutton3">Twitter</string>
    <string name="radiobutton4">Facebook</string>
    <string name="btnSend">Enviar</string>
    <string name="txImage">¿A que logo le pertenece esta imagen?</string>
    <string name="drscImage">Imagen de prueba</string>
    <string name="btnName">Enviar</string>
    <string name="btnRegreso">Regresar</string>
    <string name="mensajeLoser">Inténtalo nuevamente %1$s ...</string>
    <string name="todo">imagenCampeon</string>
    <string name="mensajeWinner">Bien hecho %1$s !!! \n <b>Eres un campeón!</b></string>
    <string name="btnSalir">Salir</string>
    <string name="escriba_nombre">Escriba nombre</string>
</resources>